# CapitalLens

./: .gitignore  CMakeLists.txt  README.md  dbmanager.cc  dbmanager.h  investmentpage.cc  login.cc  main.cc  monthselector.cc  portfolio.cc  portfolio.h  reports.h  schema.sql
resources/: schema.sql
src/: cashincashout.cc  cashincashout.h  dashboardpage.cc  dashboardpage.h  dbmanager.cc  dbservice.cc  dbservice.h  entrygroupbox.cc  entrygroupbox.h  entryrow.cc  entryrow.h  investmentpage.cc  investmentpage.h  login.h  main.cc  monthselector.cc  monthselector.h  monthselectorlayout.cc  monthselectorlayout.h  portfolio.cc  portfolio.h  reports.cc  savebutton.cc  savebutton.h  totallabel.cc  totallabel.h
